[package]
name = "linux-kcapi"
version = "0.0.0"
authors = ["Julien Kowalski <kowalski.julien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71" 
nix = "0.17.0"
log = "0.4"
lazy_static = "1.4.0"


[dev-dependencies]
env_logger="0.7.1"
