[package]
name = "linux-kcapi"
version = "0.1.0"
authors = ["Julien Kowalski <kowalski.julien@gmail.com>"]
edition = "2018"
license = "ISC"
description = "Tools for using crypto operation from the linux kernel"
readme = "Readme.md"
categories = ["cryptography", "os::unix-apis"]
repository = "https://github.com/jkowalsk/linux-kcapi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand_trait"]
rand_trait = ["rand_core"]

[dependencies]
libc = "0.2" 
nix = "0.26"
log = "0.4"
lazy_static = "1.4"

#[dependencies.nix]
#version = "0.26"
#default-features = false
#features = ["socket", "uio"]

[dependencies.rand_core]
version = "0.6"
default-features = false
features = ["alloc"]
optional = true

[dev-dependencies]
env_logger="0.10"
